# ocaml-playground

./: .gitignore  Dockerfile  README.md  dockerize.sh  fibonacci.ml  fibonacci.opam
.github/workflows/: ocaml.yml
src/: dune  fibonacci.ml  fibonacci.mli  fibonacci_main.ml
test/: dune  fibonacci_test.ml
