opam-version: "2.0"
maintainer: "widemeadows@gmail.com"
authors: ["Markus Mayer"]
license: "EUPL-1.2"
homepage: "https://github.com/sunsided/ocaml-playground"
# bug-reports: "https://example.com/issues"
dev-repo: "git+https://github.com/sunsided/ocaml-playground.git"
synopsis: "Fibonacci library"
description: """
This is a library for generating Fibonacci sequences.
"""

depends: [
  "ocaml" {>= "4.03"}
  "dune" {build}
]
